--- a/bgc/assets/css/style.css
+++ b/bgc/assets/css/style.css
@@ -169,6 +169,48 @@ p.text-large {
     max-width: 45px;
     max-height: 45px;
 }
+
+[type=button]:not(:disabled),
+button:not(:disabled) {
+    padding: 0.2rem;
+}
+
+.btn-dark.disabled, 
+.btn-dark:disabled {
+    color: #fff;
+    background-color: #5a5c69;
+    border-color: #5a5c69;
+}
+
+.btn-dark:not(:disabled):not(.disabled).active, 
+.btn-dark:not(:disabled):not(.disabled):active, 
+.show > .btn-dark.dropdown-toggle {
+    color: #fff;
+    background-image: linear-gradient(white, #fd4801);
+    border-radius: 10% !important;
+    border-color:#3d3e47;
+}
+
+.btn-light.disabled, 
+.btn-light:disabled {
+    color: #fff;
+    background-color: #5a5c69;
+    border-color: #5a5c69;
+}
+
+.btn-light:not(:disabled):not(.disabled).active, 
+.btn-light:not(:disabled):not(.disabled):active, 
+.show > .btn-dark.dropdown-toggle {
+    color: #fff;
+    background-color: #8d8f92;
+    border-radius: 10% !important;
+    border-color:#3d3e47;
+}
+
+#menu {
+    margin: 1rem;
+}
+
 /* input#email {
     background-image: url(fa-eye-slash); 
     background-repeat: no-repeat; 
